# reterm

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release-player.yml  release.yml
examples/: demo.reterm  hero.reterm  interactive.reterm  player.reterm
examples/demoenv/: .zshrc
reterm/: __init__.py  __main__.py  cli.py  play.py  redact.py
reterm/core/: __init__.py  engine.py  events.py  pty_manager.py  terminal.py
reterm/mcp/: __init__.py  server.py
reterm/output/: __init__.py  models.py
reterm/render/: __init__.py  frame.py  from_log.py  gif.py  svg.py  themes.py
reterm/script/: __init__.py  parser.py
tests/: test_engine.py  test_models.py  test_svg.py  test_terminal.py
